// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Playout check infinites are copied where possible 1`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout check infinites are copied where possible 2`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9003",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "lifespan": "part-only",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9005",
    "infinite": Object {
      "infinitePieceId": "randomId9005",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9005",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 0 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9003",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout check infinites are copied where possible 3`] = `
Array [
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "lifespan": "part-only",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9004",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9005",
    "infinite": Object {
      "infinitePieceId": "randomId9005",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9005",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 0 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9003",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9015_randomId9006",
    "infinite": Object {
      "infinitePieceId": "randomId9006",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9015",
    "piece": Object {
      "_id": "randomId9006",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 1 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part1_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9015_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9015",
    "piece": Object {
      "_id": "randomId9004",
      "content": "existing-instance",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout check infinites are copied where possible 4`] = `
Array [
  Object {
    "_id": "randomId9002_part1_2_randomId9017_randomId9009",
    "infinite": Object {
      "infinitePieceId": "randomId9009",
    },
    "partInstanceId": "randomId9002_part1_2_randomId9017",
    "piece": Object {
      "_id": "randomId9009",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_2_inf0",
      "lifespan": "segment-end",
      "name": "Part 1 2_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part1_2",
      "startPartRank": 2,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_2_randomId9017_randomId9007",
    "infinite": Object {
      "infinitePieceId": "randomId9007",
    },
    "partInstanceId": "randomId9002_part1_2_randomId9017",
    "piece": Object {
      "_id": "randomId9007",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 1 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part1_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_2_randomId9017_randomId9008",
    "infinite": Object {
      "infinitePieceId": "randomId9008",
    },
    "partInstanceId": "randomId9002_part1_2_randomId9017",
    "piece": Object {
      "_id": "randomId9008",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 1 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part1_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout check infinites are copied where possible 5`] = `
Array [
  Object {
    "_id": "randomId9002_part0_1_randomId9020_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_1_randomId9020",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "lifespan": "part-only",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9020_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9020",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9020_randomId9005",
    "infinite": Object {
      "infinitePieceId": "randomId9005",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9020",
    "piece": Object {
      "_id": "randomId9005",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 0 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9020_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9020",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9022_randomId9006",
    "infinite": Object {
      "infinitePieceId": "randomId9006",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9022",
    "piece": Object {
      "_id": "randomId9006",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 1 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part1_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9022_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9022",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout rundown progression 1`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout rundown progression 2`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "lifespan": "part-only",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "lifespan": "part-only",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "sourceLayerId": "vt0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9011_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_0_randomId9011",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "lifespan": "part-only",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9005",
    "infinite": Object {
      "infinitePieceId": "randomId9005",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9005",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 0 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Basic Playout rundown progression 3`] = `
Array [
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "lifespan": "part-only",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "sourceLayerId": "cam0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9005",
    "infinite": Object {
      "infinitePieceId": "randomId9005",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9005",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf1",
      "lifespan": "segment-end",
      "name": "Part 0 1_inf1",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf1",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_1_randomId9013_randomId9003",
    "infinite": Object {
      "infinitePieceId": "randomId9003",
    },
    "partInstanceId": "randomId9002_part0_1_randomId9013",
    "piece": Object {
      "_id": "randomId9003",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 0 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9015_randomId9006",
    "infinite": Object {
      "infinitePieceId": "randomId9006",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9015",
    "piece": Object {
      "_id": "randomId9006",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_1_0_inf0",
      "lifespan": "segment-end",
      "name": "Part 1 0_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part1_0",
      "startPartRank": 0,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment1",
      "startSegmentRank": 1,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part1_0_randomId9015_randomId9004",
    "infinite": Object {
      "infinitePieceId": "randomId9004",
    },
    "partInstanceId": "randomId9002_part1_0_randomId9015",
    "piece": Object {
      "_id": "randomId9004",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PART_0_1_inf0",
      "lifespan": "rundown-end",
      "name": "Part 0 1_inf0",
      "outputLayerId": "pgm",
      "sourceLayerId": "inf0",
      "startPartId": "randomId9002_part0_1",
      "startPartRank": 1,
      "startRundownId": "randomId9002",
      "startRundownRank": 0,
      "startSegmentId": "randomId9002_segment0",
      "startSegmentRank": 0,
      "status": -1,
    },
    "rundownId": "randomId9002",
  },
]
`;
